WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277977
[css-anchor-position-1] Don't attempt to reconstruct layout order during style resolution
https://bugs.webkit.org/show_bug.cgi?id=277977
Summary
[css-anchor-position-1] Don't attempt to reconstruct layout order during styl...
David Choi
Reported
2024-08-12 14:06:17 PDT
The current implementation of style & layout interleaving for anchor positioning attempts to reproduce the order in which elements are completely laid out (what I call "layout order") during style resolution in TreeResolver. This is an incorrect implementation, and it needs to be removed.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-12 14:06:42 PDT
<
rdar://problem/133710361
>
David Choi
Comment 2
2024-08-12 14:19:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32062
EWS
Comment 3
2024-08-13 08:29:18 PDT
Committed
282168@main
(f83902e89345): <
https://commits.webkit.org/282168@main
> Reviewed commits have been landed. Closing PR #32062 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug